--- a/ABSummit/assets/css/style.css
+++ b/ABSummit/assets/css/style.css
@@ -10385,6 +10385,10 @@ label {
 	margin: 0;
 }
 
+.our-clients img {
+  object-fit: contain;
+}
+
 .our-clients ul li {
 	list-style: none;
 	display: inline-block;
